# RiskyURL

./: README.md
riskyurl-Github/: README.md
riskyurl-Github/client/: index.html  script.js  styles.css
riskyurl-Github/server/: main.py  pyproject.toml
riskyurl-Github/server/script/: SSLTLS.py  csrf.py  directory_fuzzing.py  header2.py  sqlinjectionchecker.py  xss2.py
